[project]
name = "langgraph-youtube-pipeline"
version = "0.1.0"
description = "Automated YouTube Content Pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-openai",
    "openai",
    "moviepy",
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "python-dotenv"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Includes files in the current directory for the build
packages = ["."]